[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Entities/PlacementCursor.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 50.0

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -50.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 50.0
rect_rotation = 45.0
rect_pivot_offset = Vector2( 50, 50 )
color = Color( 1, 1, 1, 0.439216 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[connection signal="area_shape_entered" from="Area2D" to="." method="_on_Area2D_area_shape_entered"]
[connection signal="area_shape_exited" from="Area2D" to="." method="_on_Area2D_area_shape_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
